<resources>
    <string name="app_name">mezunapp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t">Bölümümüzde lisans, yüksek lisans ve doktora seviyesinde eğitim-öğretim yürütülmekte ve araştırma yapılmaktadır\n
    \nSon yıllarda önemli katılımlarla öğretim üyesi zenginleşen bölümümüzde halen 5 Profesör, 3 Doçent, 5 Doktor Öğretim Üyesi olmak üzere toplam 18 öğretim üyesi ve 6 araştırma görevlisi bulunmaktadır\n
    \n
   </string>
    <string name="g">Beyoğlu ilçesinde, Halıcıoğlu semtinde bulunan yerleşke, döneminin mimarisi içinde karakteristik olarak beliren büyük kışla binalarının modern anlamdaki ilk örneği olan ve III.Selim tarafından 1794-1795 yıllarında yaptırılan Humbaracı Kışlası\'nın kurulduğu alanda yer alır.
      </string>
</resources>