<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8B6B6"
    tools:context=".ui.gallery.GalleryFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="?colorPrimary"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleGravity="start"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:contentScrim="?attr/colorPrimaryDark"
            app:expandedTitleGravity="center_horizontal"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="@string/app_name">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/halic5"
                app:layout_collapseMode="parallax" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <!-- Now we are going to add content for app good look below collapsing toolbar -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="730dp"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f5f5f5">


            <!-- AboutToolbar -->
            <RelativeLayout
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="#F8F5F5"
                android:elevation="20dp">

                <RelativeLayout
                    android:id="@+id/org"
                    android:layout_width="30dp"
                    android:layout_height="210dp"
                    android:layout_margin="15dp"
                    android:background="#FF3D00"></RelativeLayout>

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@id/org"
                    android:text="BÖLÜMÜMÜZ"
                    android:textAllCaps="true"
                    android:textColor="#FF3D00"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text1"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/org"
                    android:text="@string/t"
                    android:textColor="#757575"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </RelativeLayout>


            <!-- AboutCollapsingToolbar -->
            <RelativeLayout
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/one"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="60dp"
                android:background="#F8F5F5"
                android:elevation="20dp">

                <RelativeLayout
                    android:id="@+id/pur"
                    android:layout_width="30dp"
                    android:layout_height="200dp"
                    android:layout_margin="15dp"
                    android:background="#9c27b0"></RelativeLayout>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@id/pur"
                    android:text="TARİHÇE"
                    android:textAllCaps="true"
                    android:textColor="#9c27b0"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text2"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/pur"
                    android:text="@string/g"
                    android:textColor="#757575"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </RelativeLayout>


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
